# RedAlt-SteamUp-Creator

./: Cargo.toml  README.md  RedAlt-SteamDB-Changelist-Grabber.js  RedAlt-SteamDB-Changelist-Grabber.user.js  steamdb_changelist_grabber.user.js
.github/workflows/: js.yml  rust.yml
RedAlt-Steam-Update-Creator/: Cargo.toml
RedAlt-Steam-Update-Creator/src/: main.rs
RedAlt-Steam-Update-Creator/src/modules/: app.rs  changes.rs  compression.rs  compression_settings.rs  create_update.rs  depot_downloader.rs  mod.rs  settings.rs
RedAlt-Steam-Update-Installer/: Cargo.toml
RedAlt-Steam-Update-Installer/src/: main.rs
RedAlt-Steam-Update-Installer/src/modules/: changes.rs  mod.rs  settings.rs
src/: main.rs
src/modules/: app.rs  changes.rs  compression.rs  compression_settings.rs  create_update.rs  depot_downloader.rs  help.rs  main.rs  mod.rs  settings.rs
