[package]
name = "RedAlt-SteamUp-Creator"
version = "1.2.0-beta.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"

[dependencies]
aes-gcm = "0.10.3"
crossbeam-channel = "0.5.11"
eframe = "0.26.2"
egui_file = "0.16.2"
reqwest = "0.11.24"
self_update = { version = "0.39.0" , features = ["default", "compression-zip-deflate"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.0"
winreg = "0.52.0"
