[package]
name = "RedAlt-Steam-Update-Creator"
version = "0.8.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"

[dependencies]
crossbeam-channel = "0.5.11"
eframe = "0.26.1"
egui_file = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
winreg = "0.52.0"
zip = "0.6.6"

