[package]
name = "RedAlt-Steam-Update-Installer"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
